[workspace]
resolver = "2"
members = [
    "alerts",
    "decoders/raydium-cpmm-decoder",
    "decoders/raydium-amm-v4-decoder",
]

[workspace.package]
version = "0.12.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/example/raydium-alert"

[workspace.dependencies]
carbon-core = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
solana-account = "3.0"
solana-instruction = { version = "3.0", default-features = false }
solana-pubkey = "3.0"
