[package]
name = "raydium-alerts"
version = "0.1.0"
edition = "2021"

[dependencies]
# Carbon framework
carbon-core = "0.12.0"
carbon-log-metrics = "0.12.0"
carbon-raydium-cpmm-decoder = { path = "../decoders/raydium-cpmm-decoder" }
carbon-raydium-clmm-decoder = { path = "../decoders/raydium-clmm-decoder" }
carbon-raydium-amm-v4-decoder = { path = "../decoders/raydium-amm-v4-decoder" }
carbon-rpc-block-subscribe-datasource = "0.12.0"

# Solana
solana-client = "3.0"
solana-pubkey = "3.0"
solana-instruction = "3.0"

# Async runtime
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

# Logging
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for webhooks
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
