[package]
name = "carbon-raydium-cpmm-decoder"
version = "0.12.0"
description = "Raydium CPMM Decoder"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sevenlabs-hq/carbon"
keywords = ["solana", "decoder", "raydium", "cpmm"]
categories = ["encoding"]

[lib]
crate-type = ["rlib"]

[dependencies]
carbon-core = "0.12.0"

solana-account = "3.0"
solana-instruction = { version = "3.0", default-features = false }
solana-pubkey = { version = "3.0", features = ["borsh"] }

serde = "1.0"
serde-big-array = "0.5"
